# NumCompute

./: README.md  contributors.txt  git_graph.txt  git_history.txt  pyproject.toml
benchmark/: benchmark_tree_vs_forest.py  benchmark_vectorised_vs_loop.py
data/: sleep_data.csv
demo/: quickstart.ipynb  stream_demo.ipynb  test_benchmarking.py  test_column_transformer.py  test_encoder.py  test_ensemble.py  test_io.py  test_metrics.py  test_mixed_preprocessing.py  test_optim.py  test_pipeline.py  test_pipeline_preprocessing.py  test_raise_errors.py  test_scaler.py  test_stats.py  test_stats_metrics.py  test_stream.py  test_tree.py  test_utils.py  test_visualise.py
numcompute/: __init__.py  benchmarking.py  ensemble.py  io.py  metrics.py  models.py  optim.py  pipeline.py  preprocessing.py  rank.py  sort_search.py  stats.py  utils.py
numcompute.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
numcompute_stream/: __init__.py  benchmarking.py  io.py  models.py  optim.py  preprocessing.py  rank.py  sort_search.py  stats.py  stream.py  tree.py  utils.py  visualise.py
tests/: test_benchmarking.py  test_column_transformer.py  test_encoder.py  test_ensemble.py  test_io.py  test_metrics.py  test_mixed_preprocessing.py  test_optim.py  test_pipeline.py  test_pipeline_preprocessing.py  test_preprocessing.py  test_raise_errors.py  test_scaler.py  test_sort_search.py  test_stats.py  test_stream.py  test_tree.py  test_utils.py  test_visualise.py
