[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "numstream"
version = "0.2.0"
description = "A modularised ensemble tree-based streaming ML framework built with NumPy"
authors = [
    { name = "Sanzana Mahrukh Hassan", email = "sanzanamahrukhhassanshreya@gmail.com" }
]
readme = "README.md"
requires-python = ">=3.10"

dependencies = [
    "numpy",
    "matplotlib"
]

[tool.setuptools.packages.find]
where = ["."]
